# the-delivery-gap-book

./: CLAUDE.md  LICENSE  README.md  TODO.md
.claude/commands/: build.md  debug.md  explore.md  feature-ds.md  feature.md  ideate.md  note.md  patch.md  pause.md  plan.md  quick.md  refine.md  resume.md  retro.md  ship.md  teach.md  up.md
ai-policy/: ai-policy-template.md  regulatory-checklist.md
gates/: README.md  agent-production-checklist.md
gates/agent-monitoring/: README.md
gates/agent-security/: README.md
gates/by-language/: README.md  go.md  javascript-typescript.md  jvm.md  php.md  python.md  ruby.md  rust.md
gates/multi-pass-review/: README.md  multi-pass-review.py  pyproject.toml
gates/multi-pass-review/delivery_gap_review/: __init__.py  reviewer.py
gates/observability/: README.md
gates/pr-size-limits/: README.md
measurement-guidance/: dora-tools.md  five-metric-diagnostic.md  github-actions-reporting.md  weekly-review-guide.md  what-to-measure.md
metrics/: README.md
quality-correctness-gates/: README.md  agent-production-checklist.md  gap-analysis.md  llm-as-judge-implementation.md  stop-hooks-implementation.md  visual-regression-gate.md
quick-start/: README.md  go.md  jvm.md  python.md  typescript.md
specs/: Feature-workflow-sample.md  toolkit-v2-redesign-plan.md  toolkit-v2-redesign-progress.md  toolkit-v2-redesign.md
specs-and-process/: README.md  specs-as-context.md  task-structuring-for-agents.md  version-controlled-prompts.md
templates/: README.md  context-file-template.md
templates/specs/: README.md  (+2 more)
tools/: README.md
(+67 files in other folders)
